--- a/Digitale_Speisekarte.tex
+++ b/Digitale_Speisekarte.tex
@@ -425,7 +425,7 @@ Ursprünglich war geplant, dass der Gast sich bevor ihm die einzelnen Speisen an
 			\end{figure}\textbf{Admininterface}\\
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 1\textwidth]{Bilder/Jok_alte_mockups_admin}
+			\includegraphics[width = 1\textwidth]{Bilder/Jok_alte_mockups_admin.png}
 			\par\end{centering}
 			\caption{alte MockUps - Admininterface}
 			\label{alte MockUps}
@@ -442,7 +442,7 @@ Ursprünglich war geplant, dass der Gast sich bevor ihm die einzelnen Speisen an
 			\end{figure}\textbf{Admininterface}\\
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 1\textwidth]{Bilder/Jok_neue_mockups_admin}
+			\includegraphics[width = 1\textwidth]{Bilder/Jok_neue_mockups_admin.jpg}
 			\par\end{centering}
 			\caption{neue MockUps - Admininterface}
 			\label{neue MockUps - Admininterface}
@@ -515,8 +515,8 @@ Das finale Layout der Screens sieht daher folgendermaßen aus:\\
 \textbf{Screens der digitalen Speisekarte}
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 0.49\textwidth]{Bilder/Jok_login.png}
-			\includegraphics[width = 0.49\textwidth]{Bilder/Jok_tnr.png}
+			\includegraphics[width = 0.49\textwidth]{Bilder/Jok_login}
+			\includegraphics[width = 0.49\textwidth]{Bilder/Jok_tnr}
 			\par\end{centering}
 			\caption{Screens: Loginscreen / Tischnummernauswahl}
 			\label{Screens: Loginscreen / Tischnummernauswahl}
@@ -524,8 +524,8 @@ Das finale Layout der Screens sieht daher folgendermaßen aus:\\
 			
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 0.49\textwidth]{Bilder/Jok_speisekarte.png}
-			\includegraphics[width = 0.49\textwidth]{Bilder/Jok_status.png}
+			\includegraphics[width = 0.49\textwidth]{Bilder/Jok_speisekarte}
+			\includegraphics[width = 0.49\textwidth]{Bilder/Jok_status}
 			\par\end{centering}
 			\caption{Screens: Speisekarte / Bestellungsüberblick}
 			\label{Screens: Speisekarte / Bestellungsüberblick}
@@ -533,35 +533,35 @@ Das finale Layout der Screens sieht daher folgendermaßen aus:\\
 \textbf{Screens des Admininterfaces}
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 0.9\textwidth]{Bilder/Jok_admin_login.png}
+			\includegraphics[width = 0.9\textwidth]{Bilder/Jok_admin_login}
 			\par\end{centering}
 			\caption{Screen - Login}
 			\label{Screen - Login}
 			\end{figure}
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 0.9\textwidth]{Bilder/Jok_admin_hauptscreen.png}
+			\includegraphics[width = 0.9\textwidth]{Bilder/Jok_admin_hauptscreen}
 			\par\end{centering}
 			\caption{Screen: Hauptscreen}
 			\label{Screen: Hauptscreen}
 			\end{figure}  
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 0.9\textwidth]{Bilder/Jok_admin_einstellungsueberblick.png}
+			\includegraphics[width = 0.9\textwidth]{Bilder/Jok_admin_einstellungsueberblick}
 			\par\end{centering}
 			\caption{Screen: Einstellungsüberblick}
 			\label{Screen: Einstellungsüberblick}
 			\end{figure}  
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 0.9\textwidth]{Bilder/Jok_admin_speiseverwaltung.png}
+			\includegraphics[width = 0.9\textwidth]{Bilder/Jok_admin_speiseverwaltung}
 			\par\end{centering}
 			\caption{Screen: Speise- und Kategorieverwaltung}
 			\label{Screen: Speise- und Kategorieverwaltung}
 			\end{figure}  
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 0.9\textwidth]{Bilder/Jok_admin_tischdaten.png}
+			\includegraphics[width = 0.9\textwidth]{Bilder/Jok_admin_tischdaten}
 			\par\end{centering}
 			\caption{Screen: Tischdatenverwaltung}
 			\label{Screen: Tischdatenverwaltung}
