weitere Dateiendungen entfernt

--- a/Digitale_Speisekarte.tex
+++ b/Digitale_Speisekarte.tex
@@ -418,14 +418,14 @@ Ursprünglich war geplant, dass der Gast sich bevor ihm die einzelnen Speisen an
 \textbf{Speisekarte}\\
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 0.8\textwidth]{Bilder/Jok_alte_mockups.jpg}
+			\includegraphics[width = 0.8\textwidth]{Bilder/Jok_alte_mockups}
 			\par\end{centering}
 			\caption{alte Mockups - Speisekarte}
 			\label{alte Mockups - Speisekarte}
 			\end{figure}\textbf{Admininterface}\\
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 1\textwidth]{Bilder/Jok_alte_mockups_admin.png}
+			\includegraphics[width = 1\textwidth]{Bilder/Jok_alte_mockups_admin}
 			\par\end{centering}
 			\caption{alte MockUps - Admininterface}
 			\label{alte MockUps}
@@ -435,14 +435,14 @@ Ursprünglich war geplant, dass der Gast sich bevor ihm die einzelnen Speisen an
 \textbf{Speisekarte}\\
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 1\textwidth]{Bilder/Jok_neue_mockups.jpg}
+			\includegraphics[width = 1\textwidth]{Bilder/Jok_neue_mockups}
 			\par\end{centering}
 			\caption{neue MockUps - Speisekarte}
 			\label{neue MockUps - Speisekarte}
 			\end{figure}\textbf{Admininterface}\\
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 1\textwidth]{Bilder/Jok_neue_mockups_admin.jpg}
+			\includegraphics[width = 1\textwidth]{Bilder/Jok_neue_mockups_admin}
 			\par\end{centering}
 			\caption{neue MockUps - Admininterface}
 			\label{neue MockUps - Admininterface}
